(fix) O3-4569: Fix layout overflow in Clear Queue modal and Queue Room Form at narrow screen widths

--- a/packages/esm-service-queues-app/src/admin/queue-rooms/queue-room-form.scss
+++ b/packages/esm-service-queues-app/src/admin/queue-rooms/queue-room-form.scss
@@ -54,3 +54,19 @@ $overlay-header-height: 5.5rem;
   padding: 0;
   margin-top: layout.$spacing-05;
 }
+
+@media (max-width: 600px) {
+  .button {
+    min-width: 100%;
+    width: 100%;
+  }
+
+  .grid {
+    margin: 0 layout.$spacing-03;
+  }
+
+  .tablet,
+  .desktop {
+    flex-direction: column;
+  }
+}
